@@ -33,7 +33,7 @@ the three implementations are not interoperable.
 .TS
 tab(@);
 lb lx .
--?@T{
+-h@T{
 Show usage information.
 T}
 -s@T{
@@ -91,6 +91,9 @@ Suppress loading of
 .I ~/.xsrc
 and
 .IR ~/.xsin .
+T}
+-V@T{
+Display version and build information.
 T}
 .TE
 .SH LANGUAGE
